# TravisCITest

./: .gitignore  .travis.yml  Math.hpp  README.md
test/: CMakeLists.txt  Makefile  MathTest.cpp  a.out  test.cpp
test/gtest/: CMakeLists.txt
